--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -44,7 +44,6 @@
 }
 
 .CARD {
-    height: 30px;
     margin-top: 1.5rem;
     border-radius: 20px;
     border: solid 1px #28a745;
@@ -53,19 +52,16 @@
 
 }
 
-.CARD-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate( -50%, -50%);
-    width: 100%;
-}
+
 
 .inner-card {
-    width: 30%;
+    position: absolute;
+    left: 0;
+    width: 100%;   width: 30%;
     background-color: rgba(0,0,0,0.7);
     height: 100%;
     border-radius: 20px;
+    z-index: -1;
 }
 
 .gateway {
@@ -95,8 +91,6 @@
     width: 30px;
     height: 30px;
     margin-right: 0.6rem;
-    display: block;
-
 }
 
 .buy-form {
