--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -61,7 +61,6 @@
 .inner-card {
     position: absolute;
     left: 0;
-    width: 100%;   width: 30%;
     background-color: rgba(0,0,0,0.7);
     height: 100%;
     border-radius: 20px;
@@ -100,6 +99,7 @@
     width: 20px;
     height: 20px;
     margin-right: 0.6rem;
+    justify-self: flex-start;
 }
 
 .buy-form {
