--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -96,10 +96,11 @@
 }
 
 .method-img {
-    width: 20px;
-    height: 20px;
+    max-width: 20px;
+    max-height: 20px;
     margin-right: 0.6rem;
     justify-self: flex-start;
+    display: inline-block;
 }
 
 .buy-form {
