--- a/src/pages/Cryptocurrencies/Crypto.css
+++ b/src/pages/Cryptocurrencies/Crypto.css
@@ -6,6 +6,10 @@
     background-color: rgba(0,0,0,0.4);
 }
 
+#crypto {
+    background-color: #f1f1f1;
+}
+
 #trade {
     width: 100%;
     height: 100%;
